--- a/filmes.html
+++ b/filmes.html
@@ -23,7 +23,7 @@
   <div class="container">
     <h1>filmes</h1>
     <div class="galeria">
-            <div class="filmes"> <img src="Imagens/filmes/O Primeiro Vingador.webp"  alt="Víbora"> 
+            <div class="filmes"> <img src="./Imagens/filmes/O Primeiro Vingador.webp"  alt="Víbora"> 
             <h3>Capitão América: O Primeiro Vingador</h3>
             <p>Steve Rogers luta para cumprir seu papel no mundo moderno, em parceria com Natasha Romanoff, também conhecida como Viúva Negra, para derrotar um poderoso e misterioso inimigo na cidade de Washington dos dias atuais.</p>
             </div>
