--- a/filmes.html
+++ b/filmes.html
@@ -23,19 +23,19 @@
   <div class="container">
     <h1>filmes</h1>
     <div class="galeria">
-            <div class="filmes"> <img src="./Imagens/filmes/O Primeiro Vingador.webp"  alt="Víbora"> 
+            <div class="filmes"> <img src="./Imagens/filmes/OPrimeiroVingador.webp"  alt="Víbora"> 
             <h3>Capitão América: O Primeiro Vingador</h3>
             <p>Steve Rogers luta para cumprir seu papel no mundo moderno, em parceria com Natasha Romanoff, também conhecida como Viúva Negra, para derrotar um poderoso e misterioso inimigo na cidade de Washington dos dias atuais.</p>
             </div>
-            <div class="filmes"> <img src="Imagens/filmes/O Soldado Invernal.webp"  alt="Imagem 1">
+            <div class="filmes"> <img src="Imagens/filmes/OSoldadoInvernal.webp"  alt="Imagem 1">
             <h3>Capitão América 2: O Soldado Invernal</h3>
             <p>Steve Rogers luta para cumprir seu papel no mundo moderno, em parceria com Natasha Romanoff, também conhecida como Viúva Negra, para derrotar um poderoso e misterioso inimigo na cidade de Washington dos dias atuais.</p>
             </div>
-            <div class="filmes"> <img src="Imagens/filmes/Guerra Civil.webp"  alt="Imagem 1">
+            <div class="filmes"> <img src="Imagens/filmes/GuerraCivil.webp"  alt="Imagem 1">
             <h3>Capitão América: Guerra Civil</h3>
             <p>Steve Rogers se vê tendo que defender o amigo Bucky, depois que ele ajudou a Hydra a se infiltrar na S.H.I.E.L.D. Porém, do outro lado da caçada, está ninguém menos do que Tony Stark, ajudando o governo a implantar um novo projeto que pretende registrar, para fins de segurança, as identidades de todos os heróis.</p>
             </div>
-            <div class="filmes"> <img src="Imagens/filmes/Admirável Mundo Novo.webp"  alt="Imagem 1">
+            <div class="filmes"> <img src="Imagens/filmes/AdmiravelMundoNovo.webp"  alt="Imagem 1">
             <h3>Capitão América: Admirável Mundo Novo</h3>
             <p>Após se encontrar com o recém-eleito presidente dos EUA, Thaddeus Ross, Sam se vê no meio de um incidente internacional. Ele deve descobrir o motivo por trás de uma conspiração global nefasta antes que o verdadeiro gênio faça o mundo inteiro ser dominado pelo vermelho.</p>
             </div>
