--- a/biografia.html
+++ b/biografia.html
@@ -19,11 +19,11 @@
   </header>
   <div class="container">
     <div class="galeria">    
-        <img src="imagens/semsoro.png" alt="Steve Rogers">
-        <img src="imagens/semecomsoro.jpg" alt="Steve Rogers">
-        <img src="imagens/substituta.webp" alt="Steve Rogers">
-        <img src="imagens/jaqueta.jpg" alt="Steve Rogers">
-        <img src="imagens/uniforme.jpg" alt="Steve Rogers">
+        <img src="Imagens/semsoro.png" alt="Steve Rogers">
+        <img src="Imagens/semecomsoro.jpg" alt="Steve Rogers">
+        <img src="Imagens/substituta.webp" alt="Steve Rogers">
+        <img src="Imagens/jaqueta.jpg" alt="Steve Rogers">
+        <img src="Imagens/uniforme.jpg" alt="Steve Rogers">
       </div>
   
     <h1>Biografia</h1>
