--- a/inimigos.html
+++ b/inimigos.html
@@ -23,39 +23,39 @@
   <div class="container">
     <h1>Inimigos</h1>
     <div class="galeria">
-            <div class="inimigos"> <img src="Imagens/inimigos/Arnim Zola.webp"  alt="Víbora"> 
+            <div class="inimigos"> <img src="imagens/inimigos/Arnim Zola.webp"  alt="Víbora"> 
             <h3>Arnim Zola</h3>
             <p>Arnim Zola, cientista nazista e aliado do Caveira Vermelha, usou a engenharia genética para criar vilões, mas sua maior criação foi ele mesmo. Transferiu sua mente para corpos robóticos com projeções de seu rosto, tornando-se praticamente imortal.</p>
             </div>
-            <div class="inimigos"> <img src="Imagens/inimigos/Barão Von Strucker.webp"  alt="Imagem 1">
+            <div class="inimigos"> <img src="imagens/inimigos/Barão Von Strucker.webp"  alt="Imagem 1">
             <h3>Barão Von</h3>
             <p>Barão Wolfgang Von Strucker, mente nazista brilhante, liderou a Hidra por décadas graças a uma droga que retardava seu envelhecimento. Seu talento estratégico manteve a organização ativa por muito tempo.</p>
             </div>
-            <div class="inimigos"> <img src="Imagens/inimigos/Barão Zemo.webp"  alt="Imagem 1">
+            <div class="inimigos"> <img src="imagens/inimigos/Barão Zemo.webp"  alt="Imagem 1">
             <h3>Barão Zemo</h3>
             <p>Barão Zemo, cientista nazista cruel, teve o rosto preso a um capuz após um acidente em combate com o Capitão América, o que o enlouqueceu. Após sua morte, seu filho herdou o nome e o ódio pelo herói, continuando sua vingança.</p>
             </div>
-            <div class="inimigos"> <img src="Imagens/inimigos/Caveira Vermelha.webp"  alt="Imagem 1">
+            <div class="inimigos"> <img src="imagens/inimigos/Caveira Vermelha.webp"  alt="Imagem 1">
             <h3>Caveira Vermelha</h3>
             <p>Caveira Vermelha, treinado por Hitler, é o símbolo do ódio nazista. Com o tempo, tornou-se cada vez mais cruel e implacável em sua busca por dominação.</p>
             </div>
-            <div class="inimigos"> <img src="Imagens/inimigos/M.O.D.O.K..webp"  alt="Imagem 1">
+            <div class="inimigos"> <img src="imagens/inimigos/M.O.D.O.K..webp"  alt="Imagem 1">
             <h3>M.O.D.O.K.</h3>
             <p>M.O.D.O.K., resultado de mutações da IMA, tornou-se um gênio deformado e assumiu o controle da organização. Com planos de destruição em massa, atraiu a atenção dos Vingadores e desenvolveu um ódio especial pelo Capitão América.</p>
             </div>
-            <div class="inimigos"> <img src="Imagens/inimigos/Ossos Cruzados.webp"  alt="Imagem 1">
+            <div class="inimigos"> <img src="imagens/inimigos/Ossos Cruzados.webp"  alt="Imagem 1">
             <h3>Ossos Cruzados</h3>
             <p>Originalmente um gangster de Nova Iorque treinado pelo Treinador, o Ossos Cruzados foi trabalhar com o Caveira Vermelha e se tornou um grande aliado da Hidra. Nos quadrinhos, o vilão é conhecido por ter conseguido matar o Capitão América - mais ou menos.</p>
             </div>
-            <div class="inimigos"> <img src="Imagens/inimigos/Soldado Invernal.webp"  alt="Imagem 1">
+            <div class="inimigos"> <img src="imagens/inimigos/Soldado Invernal.webp"  alt="Imagem 1">
             <h3>Soldado Invernal</h3>
             <p>Bucky Barnes, melhor amigo do Capitão América, foi dado como morto, mas sobreviveu e foi transformado pelos russos no Soldado Invernal, um assassino com braço biônico. Após enfrentar o Capitão, recuperou a memória e passou a lutar ao lado dos heróis.</p>
             </div>
-            <div class="inimigos"> <img src="Imagens/inimigos/Treinador.webp"  alt="Imagem 1">
+            <div class="inimigos"> <img src="imagens/inimigos/Treinador.webp"  alt="Imagem 1">
             <h3>Treinador</h3>
             <p>O Treinador, Tony Masters, copia qualquer técnica de combate que vê. Ao estudar o Capitão América, aprende a prever seus movimentos. Por anos, treinou soldados da Hidra, tornando a organização ainda mais perigosa.</p>
             </div>
-            <div class="inimigos"> <img src="Imagens/inimigos/vibora.webp"  alt="Imagem 1">
+            <div class="inimigos"> <img src="imagens/inimigos/vibora.webp"  alt="Imagem 1">
             <h3>vibora</h3>
             <p>Órfã criada pela Hidra, ela virou uma das líderes da organização. Supostamente morta, voltou como Víbora, formando o Esquadrão Serpente. Sem poderes, é uma combatente física excepcional.</p>
             </div>
