--- a/trajes.html
+++ b/trajes.html
@@ -23,58 +23,58 @@
   <div class="container">
     <h1>Trajes</h1>
     <div class="galeria">
-            <div class="Trajes"> <img src="Imagens/Trajes/capeitao America.webp"  alt="Víbora"> 
+            <div class="Trajes"> <img src="imagens/Trajes/capeitao America.webp"  alt="Víbora"> 
             <h3>Capeitao America</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Capitão Bucky.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Capitão Bucky.webp"  alt="Imagem 1">
             <h3>Capitão Bucky</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Capitão de Ferro.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Capitão de Ferro.webp"  alt="Imagem 1">
             <h3>Capitão de Ferro</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Capitão High-Tech.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Capitão High-Tech.webp"  alt="Imagem 1">
             <h3>Capitão High-Tech</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/classico.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/classico.webp"  alt="Imagem 1">
             <h3>Classico</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Fase negra.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Fase negra.webp"  alt="Imagem 1">
             <h3>Fase negra</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Herói sem Pátria.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Herói sem Pátria.webp"  alt="Imagem 1">
             <h3>Herói sem Pátria</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Primeiro Uniforme dos Vingadores.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Primeiro Uniforme dos Vingadores.webp"  alt="Imagem 1">
             <h3>Primeiro Uniforme dos Vingadores</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Segundo Uniforme dos Vingadores.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Segundo Uniforme dos Vingadores.webp"  alt="Imagem 1">
             <h3>Segundo Uniforme dos Vingadores</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Terceiro uniforme dos Vingadores.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Terceiro uniforme dos Vingadores.webp"  alt="Imagem 1">
             <h3>Terceiro uniforme dos Vingadores</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Uniforme do Quarto Vingador.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Uniforme do Quarto Vingador.webp"  alt="Imagem 1">
             <h3>Quarto Uniforme dos Vingadores</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Quinto Uniforme dos Vingadores.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Quinto Uniforme dos Vingadores.webp"  alt="Imagem 1">
             <h3>Quinto Uniforme dos Vingadores</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Super Soldado.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Super Soldado.webp"  alt="Imagem 1">
             <h3>Super Soldado</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Uniforme de Campo.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Uniforme de Campo.webp"  alt="Imagem 1">
             <h3>Uniforme de Campo</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Uniforme de Resgate Ad-Hoc.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Uniforme de Resgate Ad-Hoc.webp"  alt="Imagem 1">
             <h3>Uniforme de Resgate Ad-Hoc</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Uniforme Furtivo.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Uniforme Furtivo.webp"  alt="Imagem 1">
             <h3>Uniforme Furtivo</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Uniforme Smithsoniano.webp"  alt="Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Uniforme Smithsoniano.webp"  alt="Imagem 1">
             <h3>Uniforme Smithsoniano</h3>
             </div>
-            <div class="Trajes"> <img src="Imagens/Trajes/Uniforme USO.webp"Imagem 1">
+            <div class="Trajes"> <img src="imagens/Trajes/Uniforme USO.webp"Imagem 1">
             <h3>Uniforme USO</h3>
             </div>
           </div>
